syntax = "proto3";
package solvay;
option go_package = "/pb";
service SolvayService {
  rpc GetConferencesForPhysicists(stream PhysicistInConference) returns (DesignatedConferences);
}

message UUID {
  string uuidInString = 1;
}

message Conference {
  UUID conferenceId = 1;
  string name = 2;
  string location= 3;
  string description = 4;
  int64 startTime = 5;
  int64 endTime = 6;
  repeated PhysicistInConference physicistsInConference = 7;
}

message DesignatedConferences {
  repeated Conference conferences = 1;
}

/*
 * Temporary solution until I figure out how to import the physicist message from physicists-info
 */
message PhysicistInConference {
  UUID physicistId = 1;
  string firstName = 2;
  string lastName = 3;
  string countryOfBirth = 4;
}
